     causing failures later on.  [ticket:2312]

   - [bug] Fixed bug whereby column_property() created
     against ORM-level column could be treated as
     a distinct entity when producing certain
     kinds of joined-inh joins.  [ticket:2316]

   - [bug] Fixed the error formatting raised when 
     a tuple is inadvertently passed to session.query()
     [ticket:2297].  Also in 0.6.9.

- sql
   - [bug] related to [ticket:2316], made some 
     adjustments to the change from [ticket:2261]
     regarding the "from" list on a select(). The
     _froms collection is no longer memoized, as this
     simplifies various use cases and removes the 
     need for a "warning" if a column is attached
     to a table after it was already used in an 
     expression - the select() construct will now
     always produce the correct expression.  
     There's probably no real-world
     performance hit here; select() objects are 
     almost always made ad-hoc, and systems that 
     wish to optimize the re-use of a select()
     would be using the "compiled_cache" feature.
     A hit which would occur when calling select.bind
     has been reduced, but the vast majority
     of users shouldn't be using "bound metadata"
     anyway :).

   - [feature] The update() construct can now accommodate
     multiple tables in the WHERE clause, which will
     render an "UPDATE..FROM" construct, recognized by 
     Postgresql and MSSQL.  When compiled on MySQL,
     will instead generate "UPDATE t1, t2, ..".  MySQL
     additionally can render against multiple tables in the
     SET clause, if Column objects are used as keys
     in the "values" parameter or generative method.
     [ticket:2166] [ticket:1944]

   - [feature] Added accessor to types called "python_type",
     returns the rudimentary Python type object
     for a particular TypeEngine instance, if known,
     else raises NotImplementedError.  [ticket:77]

   - [bug] further tweak to the fix from [ticket:2261],